# safe-socket

./: .dockerignore  .gitignore  .golangci.yml  AI-Init.md  AI-Project-DNA.md  AI-Session-State.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  TESTING.md  TODO  TODO.md  docker-compose.yml  go.mod  go.sum  safe_socket.go
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  python-wheels.yml  release.yml
_archive/: TESTING.md
cmd/libsafesocket/: main.go
cmd/test/: deadline_test.go  factory_test.go  heartbeat_audit_test.go  identity_test.go  scenario_test.go  stress_test.go
python/: pyproject.toml
python/capi/: main.go
python/safesocket/: libsafe_socket.dylib  libsafe_socket.h  safe_socket.dylib  safe_socket.h  safesocket.py
python/tests/: scenario_test.py  test_basic.py
quick-overview/: Architecture-Overview.md  Decision-Log.md  Ecosystem-Map-MOC.md  Features-Behavior.md  General-Misc.md  Governance.md  Map-of-Content.md  Testing-Playbook.md
safesock/: README.md
safesock/cpp/: ARCHITECTURE.md  Makefile  README.md  SafeSocket.hpp  TESTING.md
safesock/libsafesocket/: libsafesocket.h
safesock/python/: ARCHITECTURE.md  Makefile  README.md  TESTING.md  pyproject.toml
safesock/rust/: ARCHITECTURE.md  Cargo.toml  Makefile  README.md  TESTING.md
safesock/vba/: ARCHITECTURE.md  README.md  SafeSocket.bas  TESTING.md
schemas/: messages.capnp  messages.capnp.go
src/cgo_bridge/: errors.c  helpers.h  initialize.go  sanitizer.go  socket.go
src/facade/: enveloped_connection.go  (+8 more)
(+50 files in other folders)
