[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-socket"
version = "0.1.0"
description = "Python bindings for the safe-socket Go library"
readme = "README.md"
authors = [
    { name = "Bastien Antigravity" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["safesocket*"]

[tool.setuptools.package-data]
safesocket = ["*.so", "*.dylib", "*.dll"]
